# TP24-25Public

sem10_docker/cpp/: Dockerfile
sem10_docker/cpp/src/: main.cpp
sem10_docker/cpp/src/app/: main
sem10_docker/flask_example/: Dockerfile
sem10_docker/too_many/: Dockerfile
sem6_build/projectCmake/: CMakeLists.txt  generate.sh  main.cpp
sem6_build/projectCmake/include/: fibo.h
sem6_build/projectCmake/src/: fibo.cpp
sem6_build/projectCmake/test/: fibo_test.cpp
sem8_testing/testing-from-scratch/task-testing-cpp/: .gitignore  CMakeLists.txt  README.md
sem8_testing/testing-from-scratch/task-testing-cpp/tests/01-simple-library/: LeapTestCase.cpp
sem8_testing/testing-from-scratch/task-testing-cpp/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
sem8_testing/testing-from-scratch/task-testing-cpp/tests/03-weather/: ApiMakeCalles.cpp  CMakeLists.txt  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
sem8_testing/testing-from-scratch/task-testing-cpp/tests/03-weather/data/: location.json  moscow_get_response_for_city.json
